css: fix contrast of non-focused search box

--- a/content/media/css/luffy.search.less
+++ b/content/media/css/luffy.search.less
@@ -28,8 +28,8 @@
 
         transition: width .5s;
         width: 110px;
-        background-color: #888;
-        color: #ccc;
+        background-color: #666;
+        color: #eee;
     }
     input[type="submit"]:focus + #lf-search-query, #lf-search-query:focus {
         width: 250px;
